--- a/index.html
+++ b/index.html
@@ -1,77 +1,146 @@
 <!DOCTYPE html>
-<html>
+<!-- HTML5Boilerplate v2.0: https://github.com/paulirish/html5-boilerplate/blob/b23de068c5a3cafe2dc642d095221245e578af34/index.html -->
+<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
+<!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
+<!-- Consider adding a manifest.appcache: h5bp.com/d/Offline -->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
-  <meta charset='utf-8'>
+	<meta charset="utf-8">
+	<!-- Use the .htaccess and remove these lines to avoid edge case issues. More info: h5bp.com/b/378 -->
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<!-- Mobile viewport optimized: j.mp/bplateviewport -->
+	<meta name="viewport" content="width=device-width,initial-scale=1">
 
-  <title>chrisjacob/TAFEE @ GitHub</title>
+	<title>TAFEE - Boilerplate for Tiered, Adaptive Front-end Experiences</title>
+	<meta name="description" content="TAFEE (pronounced: taffy): tiered, adaptive front-end experiences. Customizing the experience to the unique capabilities of each browser, prioritizing a fast and good UX over consistency.">
+	<meta name="author" content="Chris Jacob">
+	<!-- 
+		Full credit to @paulirish & @SlexAxton for coining TAFEE. 
+		Paul Irish eloquently explains the concept here: http://paulirish.com/2011/tiered-adaptive-front-end-experiences/
+	-->
 
-  <style type="text/css">
-    body {
-      margin-top: 1.0em;
-      background-color: #ffccff;
-      font-family: Helvetica, Arial, FreeSans, san-serif;
-      color: #000000;
-    }
-    #container {
-      margin: 0 auto;
-      width: 700px;
-    }
-    h1 { font-size: 3.8em; color: #003300; margin-bottom: 3px; }
-    h1 .small { font-size: 0.4em; }
-    h1 a { text-decoration: none }
-    h2 { font-size: 1.5em; color: #003300; }
-    h3 { text-align: center; color: #003300; }
-    a { color: #003300; }
-    .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
-    .download { float: right; }
-    pre { background: #000; color: #fff; padding: 15px;}
-    hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
-    .footer { text-align:center; padding-top:30px; font-style: italic; }
-  </style>
+	<!-- 
+		Determine user experience: mobile, basic, advanced or customized.
+		Feature detect, apply classes to <head>, and load CSS/LESS styles.
+		All other JavaScript at bottom the bottom of the page
+	-->
+	<script src="assets/js/_initialize.min.js"></script>
+
+	<!-- Provide the BASIC styling to no-js visitors (assuming most likely to be desktop browsers without js)-->
+	<noscript>
+		<link rel="stylesheet" href="assets/css/basic.min.css">
+	</noscript>
+
+	<!-- 
+		favicon.ico and apple-touch-icon.png's in the root directory
+		However, also hardcoding links here to support Android: mathiasbynens.be/notes/touch-icons 
+	-->
+	<!-- For iPhone 4 with high-resolution Retina display: -->
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114-precomposed.png">
+	<!-- For first-generation iPad: -->
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72-precomposed.png">
+	<!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
+	<link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
+
+	<!-- http://www.sitemaps.org/protocol.php -->
+	<link rel="sitemap" type="application/xml" href="sitemap.xml">
+	<!-- http://humanstxt.org/ -->
+	<link rel="author" type="text/plain" href="humans.txt">
+	
+<!-- 
+TODO: 
+- Think about some JS to render the sitemap.xml nice and pretty for end users
+- Think about linking to humans.txt in footer
+- Accessible jump links, ARIA, Microformats, Roles, META etc ... 
+-->
 </head>
 
-<body>
-  <a href="http://github.com/chrisjacob/TAFEE"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
-
+<!-- http://paulirish.com/2009/markup-based-unobtrusive-comprehensive-dom-ready-execution/ -->
+<!-- Id and Class attributes prepended with "c" for Controller and "a" for Action to "namespace" these dynamic strings -->
+<body id="cController" class="aAction" data-controller="controller" data-action="action">
+	
+	<!-- 
+		Markup taken from Golden Grid System demo http://goldengridsystem.com/
+		Planning to implement this folding grid for responsive design.
+	-->
   <div id="container">
-
-    <div class="download">
-      <a href="http://github.com/chrisjacob/TAFEE/zipball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/chrisjacob/TAFEE/tarball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
-    </div>
-
-    <h1><a href="http://github.com/chrisjacob/TAFEE">TAFEE</a>
-      <span class="small">by <a href="http://github.com/chrisjacob">chrisjacob</a></span></h1>
-
-    <div class="description">
-      Boilerplate for Tiered, Adaptive Front-end Experiences (TAFEE)
-    </div>
-
-    <h2>Authors</h2>
-<p>Chris Jacob (i.chris.jacob@gmail.com)<br/><br/>      </p>
-<h2>Contact</h2>
-<p>Chris Jacob (i.chris.jacob@gmail.com)<br/>      </p>
-
-
-    <h2>Download</h2>
-    <p>
-      You can download this project in either
-      <a href="http://github.com/chrisjacob/TAFEE/zipball/master">zip</a> or
-      <a href="http://github.com/chrisjacob/TAFEE/tarball/master">tar</a> formats.
-    </p>
-    <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
-      by running:
-      <pre>$ git clone git://github.com/chrisjacob/TAFEE</pre>
-    </p>
-
-    <div class="footer">
-      get the source code on GitHub : <a href="http://github.com/chrisjacob/TAFEE">chrisjacob/TAFEE</a>
-    </div>
-
-  </div>
-
+    <header>
+      <div class="wrapper">
+        <h1>
+          A Demonstration
+        </h1>
+        <h2>
+          Try resizing your browser or viewing this page on different devices. Use the icon in the upper right corner to see an overlay of the grid.
+        </h2>
+      </div>
+    </header>
+    <article id="twoway">
+      <section class="wrapper">
+        <h3>
+          A two-way split
+        </h3>
+        <p>
+          These two blocks of text will float side by side with some empty columns on the sides on large screens. On medium-sized screens the empty columns will disappear, and on small screens the blocks will be stacked vertically.
+        </p>
+				<p>
+					<!-- 
+						Considering "Lazy Loading" image assets e.g. like JAIL.js but more lightweight - in particular removing the dependency on jQuery
+						https://github.com/sebarmeli/JAIL
+						
+						The <i> tag is used as a CSS "hook", it also provides us with a lot of control as a container for the image (e.g. i {overflow: hidden;} )
+						It's a non-semantic use of the <I> element - but it's short to type, easy to remember, and renders alt text nicely when images are turned off
+						http://html5doctor.com/i-b-em-strong-element/ 
+					-->
+					<i class="image"><img class="lazy w240 w720 w1024" data-src="apple-touch-icon-114x114-precomposed.png" data-alt="Apple Touch Icon 114x114 Precomposed" data-width="114" data-height="114"><noscript><img src="apple-touch-icon-114x114-precomposed.png" alt="Apple Touch Icon 114x114 Precomposed"></noscript></i>
+				</p>
+      </section>
+      <section class="wrapper">
+        <h3>
+          By the way
+        </h3>
+        <p>
+          If you're viewing this page on an iOS device, it might zoom in wonkily when you rotate your device. This is because of <a href="http://filamentgroup.com/examples/iosScaleBug/">a Mobile Safari bug</a>.
+        </p>
+				<!-- 
+					Going to investigate taking UX to another level "Customtized".
+					Looking to use less.js to JIT compile CSS and override the defaults set in advanced.defaults.min.css
+					e.g. an iPhone user forces a "desktop site" version (say 1200px), which actually recompiles the CSS to ignore the "true" media queries
+					More simply "cusomized" UX's may just come down to custom "theming" of a page... but the possibilities are endless.
+				-->
+        <h3>
+          Set styles like a BOSS... change background color.
+        </h3>
+        <form id="options" action="" method="post">
+          <input id="option-color" name="color" type="text" value="pink">
+          <button id="option-submit">Submit</button>
+        </form>
+      </section>
+    </article>
+  </div><!--! #container -->
   
+  <div id="prompt" class="info">
+		<noscript>
+			<p>
+				Please enable JavaScript...
+			</p>
+		</noscript>
+	</div>
+  
+  <!-- JavaScript at the bottom for fast page loading -->
+  
+  <!-- 
+		The DOM is loaded and ready for action. Time to conditionally download, parse and execute some scripts...
+		Also might defer load HTML snippets for Advanced UX... remember we're working Mobile First. 
+ 	-->
+  <script src="assets/js/_finalize.js"></script>
+
+  <!-- Prompt IE 6/7/8 users to install Google Chrome Frame.
+       chromium.org/developers/how-tos/chrome-frame-getting-started -->
+  <!--[if lt IE 9 ]>
+    <script defer src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
+    <script defer>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
+  <![endif]-->
 </body>
 </html>
